Accuracy of model

--- a/21Mar_ML_assignment.ipynb
+++ b/21Mar_ML_assignment.ipynb
@@ -36,6 +36,23 @@
     "\n",
     "# **Q3. Define covariance and explain why it is important in statistical analysis. How is covariance calculated?**\n",
     "\n",
+    "\n",
+    "*AMS:*\n",
+    "covarinace is a measure of how much two random variable vary together. it is calculated as the avarage of the product of the deviation of the each variable from it mean\n",
+    "\n",
+    "A positive covarinace indicates that the two variable tend to move in the same direction, while negative covarince indicates that they tend to move in opposite direction. A covarince of zero indicates that there is no linear relationship between the two variables \n",
+    "- covarinace is important in statistical analysis becuase it can be used to : \n",
+    "    * identify the relation between two variable\n",
+    "    * predict the value of one variable given in the value of another variable.\n",
+    "    * Control for the effects of one varible when analyzing the relation between two other variable  \n",
+    "The covarince between two varible is calculates as follows :\n",
+    "`cov(x, y) = (x - mean(x)) * (y - mean(y)) / n`\n",
+    "Where \n",
+    "* `x` and `y` are two variable\n",
+    "* `mean(x)` and `mean(y)` are the means of two variables \n",
+    "* `n` is the number of obeservation\n",
+    "```cov(x,y) =(x-mean(x)) * (y-mean(y)) / n\n",
+    "= `\n",
     "***\n"
    ]
   },
