21 mar ml assignment completed

--- a/18mar_ML_AssQ.ipynb
+++ b/18mar_ML_AssQ.ipynb
@@ -133,7 +133,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Q6. In a telecom company, you are working on a project to develop a predictive model for customer churn. You are unsure of which features to include in the model because the dataset contains several different ones. Describe how you would choose the most pertinent attributes for the model using the Filter Method.**\n"
+    "# **Q6. In a telecom company, you are working on a project to develop a predictive model for customer churn. You are unsure of which features to include in the model because the dataset contains several different ones. Describe how you would choose the most pertinent attributes for the model using the Filter Method.**\n",
+    "\n",
+    "filter method is the very common method in machine learning for selecting very relevant and very important features amongs the large number of features are presents in the data set Here is how we can find  \n",
+    "\n"
    ]
   },
   {
