22 Mar ML assignment completed

--- a/22mar_ML_assignment.ipynb
+++ b/22mar_ML_assignment.ipynb
@@ -1,34 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#\n",
-    "\n",
-    "# Q5. A survey was conducted to examine the relationship between age and preference for a particular\n",
-    "# brand of soft drink. The survey results are shown below:\n",
-    "# Age(Years)\n",
-    "# 25 Coke\n",
-    "# 42 Pepsi\n",
-    "# 37\n",
-    "# 19\n",
-    "# 31\n",
-    "# 28\n",
-    "\n",
-    "# Mountain dew\n",
-    "# Coke\n",
-    "# Pepsi\n",
-    "# Coke\n",
-    "\n",
-    "# Q6. A company is interested in examining the relationship between the number of sales calls made per day\n",
-    "# and the number of sales made per week. The company collected data on both variables from a sample of\n",
-    "# 30 sales representatives. Calculate the Pearson correlation coefficient between these two variables."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +236,7 @@
        "physical_activity          -0.988289           1.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +268,494 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **the person correlation coeficient is 0.10173 and the correlation between the indiviadual spent hours to watch tv and thier physical activity is negative that means if the individuals spent more hours watching tv their physical activity is decreasing.**"
+    "### **the person correlation coeficient is 0.10173 and the correlation between the indiviadual spent hours to watch tv and thier physical activity is negative that means if the individuals spent more hours watching tv their physical activity is decreasing.**\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Q5. A survey was conducted to examine the relationship between age and preference for a particular brand of soft drink. The survey results are shown below:**\n",
+    "\n",
+    "|Age(Years)|Soft Drinks Prefernce|\n",
+    "|-----|------|\n",
+    "|25|Coke|\n",
+    "|42|Pepsi|\n",
+    "|37|Mountain Dew|\n",
+    "|19|Coke|\n",
+    "|31|Pepsi|\n",
+    "|28|Coke|"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Soft Drink Prefernce</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Coke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Pepsi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Mountain Dew</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Coke</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Pepsi</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Soft Drink Prefernce\n",
+       "0   25                 Coke\n",
+       "1   42                Pepsi\n",
+       "2   37         Mountain Dew\n",
+       "3   19                 Coke\n",
+       "4   31                Pepsi"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Age' : [25,42,37,19,31,28],\n",
+    "    'Soft Drink Prefernce' : ['Coke','Pepsi','Mountain Dew','Coke','Pepsi','Coke']\n",
+    "})\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Soft Drink Prefernce</th>\n",
+       "      <th>Soft Drink Prefernce_Coke</th>\n",
+       "      <th>Soft Drink Prefernce_Mountain Dew</th>\n",
+       "      <th>Soft Drink Prefernce_Pepsi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Coke</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Pepsi</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Mountain Dew</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Coke</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Pepsi</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age Soft Drink Prefernce  Soft Drink Prefernce_Coke  \\\n",
+       "0   25                 Coke                        1.0   \n",
+       "1   42                Pepsi                        0.0   \n",
+       "2   37         Mountain Dew                        0.0   \n",
+       "3   19                 Coke                        1.0   \n",
+       "4   31                Pepsi                        0.0   \n",
+       "\n",
+       "   Soft Drink Prefernce_Mountain Dew  Soft Drink Prefernce_Pepsi  \n",
+       "0                                0.0                         0.0  \n",
+       "1                                0.0                         1.0  \n",
+       "2                                1.0                         0.0  \n",
+       "3                                0.0                         0.0  \n",
+       "4                                0.0                         1.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# as we can see their are categorical feature present in our dataset so furst we have to use an encoding to convert them into numerical , for above case we can use the onehot encoding .\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "encoder = OneHotEncoder()\n",
+    "encoded = encoder.fit_transform(df[['Soft Drink Prefernce']])\n",
+    "encoded_df = pd.DataFrame(encoded.toarray(),columns=encoder.get_feature_names_out())\n",
+    "df = pd.concat([df,encoded_df],axis=1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Soft Drink Prefernce_Coke</th>\n",
+       "      <th>Soft Drink Prefernce_Mountain Dew</th>\n",
+       "      <th>Soft Drink Prefernce_Pepsi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Age</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.878310</td>\n",
+       "      <td>0.392792</td>\n",
+       "      <td>0.621059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Soft Drink Prefernce_Coke</th>\n",
+       "      <td>-0.878310</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.447214</td>\n",
+       "      <td>-0.707107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Soft Drink Prefernce_Mountain Dew</th>\n",
+       "      <td>0.392792</td>\n",
+       "      <td>-0.447214</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.316228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Soft Drink Prefernce_Pepsi</th>\n",
+       "      <td>0.621059</td>\n",
+       "      <td>-0.707107</td>\n",
+       "      <td>-0.316228</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        Age  Soft Drink Prefernce_Coke  \\\n",
+       "Age                                1.000000                  -0.878310   \n",
+       "Soft Drink Prefernce_Coke         -0.878310                   1.000000   \n",
+       "Soft Drink Prefernce_Mountain Dew  0.392792                  -0.447214   \n",
+       "Soft Drink Prefernce_Pepsi         0.621059                  -0.707107   \n",
+       "\n",
+       "                                   Soft Drink Prefernce_Mountain Dew  \\\n",
+       "Age                                                         0.392792   \n",
+       "Soft Drink Prefernce_Coke                                  -0.447214   \n",
+       "Soft Drink Prefernce_Mountain Dew                           1.000000   \n",
+       "Soft Drink Prefernce_Pepsi                                 -0.316228   \n",
+       "\n",
+       "                                   Soft Drink Prefernce_Pepsi  \n",
+       "Age                                                  0.621059  \n",
+       "Soft Drink Prefernce_Coke                           -0.707107  \n",
+       "Soft Drink Prefernce_Mountain Dew                   -0.316228  \n",
+       "Soft Drink Prefernce_Pepsi                           1.000000  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now we converted the categorical data into numerical so now we can get the relationship \n",
+    "df.corr(method='spearman',numeric_only=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Q6. A company is interested in examining the relationship between the number of sales calls made per day and the number of sales made per week. The company collected data on both variables from a sample of 30 sales representatives. Calculate the Pearson correlation coefficient between these two variables.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  30 sels represent\n",
+    "# sales calls | sales made \n",
+    "sales_calls_per_week =    [  10, 12, 8, 15, 14, 18, 20, 22, 10, 12,\n",
+    "                           16, 25, 8, 14, 18, 20, 22, 24, 25, 30,\n",
+    "                           15, 12, 10, 8, 18, 20, 22, 24, 25, 28]\n",
+    "\n",
+    "sales_per_week =          [5, 6, 4, 7, 8, 9, 10, 11, 5, 6,\n",
+    "                           8, 15, 4, 7, 10, 11, 12, 13, 14, 16,\n",
+    "                           8, 6, 5, 4, 10, 12, 13, 14, 15, 17]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales_calls_per_week</th>\n",
+       "      <th>sales_per_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sales_calls_per_week  sales_per_week\n",
+       "0                    10               5\n",
+       "1                    12               6\n",
+       "2                     8               4\n",
+       "3                    15               7\n",
+       "4                    14               8"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'sales_calls_per_week' : sales_calls_per_week,\n",
+    "    'sales_per_week' :sales_per_week\n",
+    "})\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales_calls_per_week</th>\n",
+       "      <th>sales_per_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>sales_calls_per_week</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.986835</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sales_per_week</th>\n",
+       "      <td>0.986835</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      sales_calls_per_week  sales_per_week\n",
+       "sales_calls_per_week              1.000000        0.986835\n",
+       "sales_per_week                    0.986835        1.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr(method='pearson')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The correlation coeficient of the these two variable is 0.986 which is possitive correlation coeficient between two of them , this mean if the sales called per week increases the sales per week also increases. \n",
+    "\n",
+    "\n",
+    "***"
    ]
   }
  ],
